--- a/crates/installer/Cargo.toml
+++ b/crates/installer/Cargo.toml
@@ -9,4 +9,6 @@ windows = { version = "0.58", features = [
     "Win32_UI_TextServices",
     "Win32_System_Com",
     "Win32_Foundation",
+    "Win32_UI_Shell",
+    "Win32_System_LibraryLoader",
 ] }
