--- a/crates/draco_body/Cargo.toml
+++ b/crates/draco_body/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ime-core"
+name = "draco_body"
 version = "0.1.0"
 edition = "2021"
 
@@ -21,4 +21,4 @@ windows-core = "0.58"
 tokio = { version = "1", features = ["sync", "net", "io-util", "rt", "macros", "time"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-correction-engine = { path = "../correction-engine" }
+draco_brain = { path = "../draco_brain" }
