--- a/crates/draco_head/Cargo.toml
+++ b/crates/draco_head/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "tray-app"
+name = "draco_head"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-correction-engine = { path = "../correction-engine" }
+draco_brain = { path = "../draco_brain" }
 windows = { version = "0.52", features = [
     "Win32_UI_WindowsAndMessaging",
     "Win32_UI_Shell",
